# slib

./: .gitignore  CMakeLists.txt  slib.pc.in
include/slib/: compiler.h  dynamic-string.h  hash.h  hmap.h  list.h  shash.h  sset.h  svec.h  unaligned.h  util.h  vector.h
src/: dynamic-string.c  hash.c  hmap.c  shash.c  sset.c  svec.c  util.c  vector.c
src/inc/: compiler.h  util.h
